kubernetes/backend-deployment.yaml
# kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ground-station-backend
  namespace: aerospace-monitoring
  labels:
    app: ground-station-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ground-station-backend
  template:
    metadata:
      labels:
        app: ground-station-backend
    spec:
      containers:
        - name: backend
          image: solvrex/ground-station-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: aerospace-monitoring
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: ground-station-backend
  type: ClusterIP
