kubernetes/frontend-deployment.yaml
# kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ground-station-frontend
  namespace: aerospace-monitoring
  labels:
    app: ground-station-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ground-station-frontend
  template:
    metadata:
      labels:
        app: ground-station-frontend
    spec:
      containers:
        - name: frontend
          image: solvrex/ground-station-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: aerospace-monitoring
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: ground-station-frontend
  type: ClusterIP
